feat: Enhance logging severity and integrate LangFuse observability annotations
(cherry picked from commit 44bcf1301e44efcafde3614c38d60ffa6264c48e)